--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.lesfrancschatons.cordova.plugins.pdfreader",
+  "name": "PDFReader",
   "version": "2.0.1",
-  "description": "Cordova PDF reader for IOS (based on Reader http://www.vfr.org/)",
+  "description": "Cordova plugin to view PDF files on iOS",
   "cordova": {
     "id": "com.lesfrancschatons.cordova.plugins.pdfreader",
     "platforms": [
@@ -10,12 +10,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/clausasd/Cordova-PDFReader-IOS.git"
+    "url": "git+https://github.com/clausasd/Cordova-PDFReader-IOS"
   },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/clausasd/Cordova-PDFReader-IOS/issues"
-  },
-  "homepage": "https://github.com/clausasd/Cordova-PDFReader-IOS#readme"
+  "keywords": [
+    "cordova",
+    "ios",
+    "pdf",
+    "ecosystem:cordova",
+    "cordova-ios"
+  ],
+  "engines": [
+    {
+      "name": "cordova",
+      "version": ">=3.0.0"
+    }
+  ],
+  "author": "Georgiy Trokovets",
+  "license": "MIT"
 }
